// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGrammar > fanuc-gcode: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^\\s*%.*$",
        "programMarker",
      ],
      [
        "\\([^)]*\\)",
        "comment",
      ],
      [
        "\\([^)]*$",
        "comment",
      ],
      [
        "<[A-Za-z0-9+\\-_.]+>",
        "programMarker",
      ],
      [
        "^(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*[/][1-9]?",
        "skip",
      ],
      [
        "^(\\s*)(N\\s*\\d+)(\\s*)([/][1-9]?)",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*O(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*<(?<name>[A-Za-z0-9+\\-_.]+)>",
        "programMarker",
      ],
      [
        "^\\s*:\\s*\\d+",
        "programMarker",
      ],
      [
        "(?:AXNUM|BPRNT|DPRNT|PCLOS|POPEN|ROUND|WHILE|ACOS|ASIN|ATAN|GOTO|SQRT|THEN|ABS|ADP|AND|ATN|BCD|BIN|COS|END|EXP|FIX|FUP|MOD|POW|RND|SIN|SQR|TAN|XOR|AX|DO|EQ|GE|GT|IF|LE|LN|LT|NE|OR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "[A-Za-z]{2,8}(?=\\s*\\[)",
        "keyword",
      ],
      [
        "[A-Za-z]{3,}(?:\\s+(?!(?:AXNUM|BPRNT|DPRNT|PCLOS|POPEN|ROUND|WHILE|ACOS|ASIN|ATAN|GOTO|SQRT|THEN|ABS|ADP|AND|ATN|BCD|BIN|COS|END|EXP|FIX|FUP|MOD|POW|RND|SIN|SQR|TAN|XOR|AX|DO|EQ|GE|GT|IF|LE|LN|LT|NE|OR)(?![A-Za-z]))[A-Za-z]+(?![A-Za-z])(?!\\s*(?:[0-9+\\-\\[#]|\\.)))*",
        "",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "G\\s*\\d{1,4}(?:\\.\\d{1,2})?",
        "gcode",
      ],
      [
        "M\\s*\\d{1,4}",
        "mcode",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "tool",
      ],
      [
        ",[A-Za-z](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "number",
      ],
      [
        "[XYZABCUVW](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "axis",
      ],
      [
        "[IJK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "spindle",
      ],
      [
        "[DHLOPQR](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "number",
      ],
      [
        "(?:#\\d+)",
        "variable",
      ],
      [
        "#\\s*(?=\\[)",
        "variable",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,!\\[\\];]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > fanuc-lathe: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^\\s*%.*$",
        "programMarker",
      ],
      [
        "\\([^)]*\\)",
        "comment",
      ],
      [
        "\\([^)]*$",
        "comment",
      ],
      [
        "<[A-Za-z0-9+\\-_.]+>",
        "programMarker",
      ],
      [
        "^(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^(\\s*)([/][1-9]?)(\\s*)([/][1-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*[/][1-9]?",
        "skip",
      ],
      [
        "^(\\s*)(N\\s*\\d+)(\\s*)([/][1-9]?)",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*O(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*<(?<name>[A-Za-z0-9+\\-_.]+)>",
        "programMarker",
      ],
      [
        "^\\s*:\\s*\\d+",
        "programMarker",
      ],
      [
        "(?:AXNUM|BPRNT|DPRNT|PCLOS|POPEN|ROUND|WHILE|ACOS|ASIN|ATAN|GOTO|SQRT|THEN|ABS|ADP|AND|ATN|BCD|BIN|COS|END|EXP|FIX|FUP|MOD|POW|RND|SIN|SQR|TAN|XOR|AX|DO|EQ|GE|GT|IF|LE|LN|LT|NE|OR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "[A-Za-z]{2,8}(?=\\s*\\[)",
        "keyword",
      ],
      [
        "[A-Za-z]{3,}(?:\\s+(?!(?:AXNUM|BPRNT|DPRNT|PCLOS|POPEN|ROUND|WHILE|ACOS|ASIN|ATAN|GOTO|SQRT|THEN|ABS|ADP|AND|ATN|BCD|BIN|COS|END|EXP|FIX|FUP|MOD|POW|RND|SIN|SQR|TAN|XOR|AX|DO|EQ|GE|GT|IF|LE|LN|LT|NE|OR)(?![A-Za-z]))[A-Za-z]+(?![A-Za-z])(?!\\s*(?:[0-9+\\-\\[#]|\\.)))*",
        "",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "G\\s*\\d{1,4}(?:\\.\\d{1,2})?",
        "gcode",
      ],
      [
        "M\\s*\\d{1,4}",
        "mcode",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "tool",
      ],
      [
        ",[A-Za-z](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "number",
      ],
      [
        "[XZCYUW](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "axis",
      ],
      [
        "[IK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "spindle",
      ],
      [
        "[ABDEHJLOPQRV](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*(?:[+-]\\s*)?(?=[#\\[]))",
        "number",
      ],
      [
        "(?:#\\d+)",
        "variable",
      ],
      [
        "#\\s*(?=\\[)",
        "variable",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,!\\[\\];]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > heidenhain-klartext: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^(?:\\s*(?:/\\s*)?\\d+\\s+(?:/\\s*)?\\*).*$",
        "section",
      ],
      [
        ";.*?(?=\\s*(?:~\\s*$))",
        "comment",
      ],
      [
        ";.*$",
        "comment",
      ],
      [
        "~\\s*$",
        "operator",
      ],
      [
        ""[^"]*"",
        "string",
      ],
      [
        "^(\\s*)([/])(\\s*)(\\d+)(?=\\s|$)",
        [
          "",
          "skip",
          "",
          "blockNumber",
        ],
      ],
      [
        "^(\\s*)(\\d+)(\\s*)([/])",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*\\d+(?=\\s|$)",
        "blockNumber",
      ],
      [
        "(CYCL\\s+DEF)(\\s+)(\\d+(?:\\.0+)?)(\\s+)((?![A-Z]{1,2}[+\\-]?\\d)[^\\s;~+\\-.\\d#"(](?:[^;~]*?[^\\s;~])?)(?=\\s*(?:[;~]|$)|\\s+Q\\d+\\s*=)",
        [
          "keyword",
          "",
          "number",
          "",
          "",
        ],
      ],
      [
        "(CYCL\\s+DEF)(\\s+)(9\\.1)(\\s+)([A-Z][A-Z.\\-]*)(?=\\s*[+-]?\\d)",
        [
          "keyword",
          "",
          "number",
          "",
          "",
        ],
      ],
      [
        "((?:BEGIN|END)\\s+PGM)(\\s+)([^\\s;](?:[^;]*?[^\\s;])?)(?=\\s+(?:MM|INCH)\\s*(?:;|$))",
        [
          "keyword",
          "",
          "",
        ],
      ],
      [
        "((?:BEGIN|END)\\s+PGM)(\\s+)([^\\s;]+)(?=\\s*$)",
        [
          "keyword",
          "",
          "",
        ],
      ],
      [
        "(CYCL\\s+DEF)(\\s+)(12\\.1)(\\s+)(PGM)(\\s+)([^\\s;~]+)",
        [
          "keyword",
          "",
          "number",
          "",
          "",
          "",
          "",
        ],
      ],
      [
        "(FN)(\\s*)(16)(\\s*)(:)(\\s*)([^\\s;](?:[^;]*?[^\\s;])?)(?=\\s*(?:;|$))",
        [
          "keyword",
          "",
          "number",
          "",
          "operator",
          "",
          "",
        ],
      ],
      [
        "(CALL\\s+PGM)(\\s+)([^\\s;~"]+)",
        [
          "keyword",
          "",
          "",
        ],
      ],
      [
        "(?:HSC-MODE|VCONST|VC):(?:(?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+))|\\[[^\\]]*\\]|[A-Za-z]+)(?=\\s|$|;)",
        "number",
      ],
      [
        "[#](?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+))(?=\\s|$|"|;)",
        "number",
      ],
      [
        "(?:REFPNT\\s+CENTER-CENTER|FUNCTION\\s+RESET\\s+TCPM|REFPNT\\s+TIP-CENTER|PATHCTRL\\s+VECTOR|PLANE\\s+PROJECTED|REFPNT\\s+TIP-TIP|CYCL\\s+CALL\\s+PAT|CYCL\\s+CALL\\s+POS|FUNCTION\\s+TCPM|PATHCTRL\\s+AXIS|PLANE\\s+RELATIV|PLANE\\s+SPATIAL|PLANE\\s+POINTS|PLANE\\s+VECTOR|PLANE\\s+AXIAL|PLANE\\s+EULER|PLANE\\s+RESET|TRANS\\s+DATUM|AXIS\\s+SPAT|BEGIN\\s+PGM|COORD\\s+ROT|CYCL\\s+CALL|TABLE\\s+ROT|TOOL\\s+CALL|APPR\\s+LCT|AXIS\\s+POS|BLK\\s+FORM|CALL\\s+LBL|CALL\\s+PGM|CYCL\\s+DEF|TOOL\\s+DEF|APPR\\s+CT|APPR\\s+LN|APPR\\s+LT|DEP\\s+LCT|END\\s+PGM|SEL\\s+PGM|DEP\\s+CT|DEP\\s+LN|DEP\\s+LT|F\\s+CONT|F\\s+TCP|FAUTO|FMAX|INCH|MOVE|SEQ\\+|SEQ-|STAY|STOP|TURN|CHF|CTP|LBL|MAX|REP|RND|CC|CP|CR|CT|FN|LN|LP|MB|MM|R0|RL|RR|VC)(?![A-Za-z])(?![.,]\\d)",
        "keyword",
      ],
      [
        "(?:C|L)(?=\\s|$)",
        "keyword",
      ],
      [
        "M\\d{1,3}(?![A-Za-z0-9])",
        "mcode",
      ],
      [
        "DR[+-](?![\\d.,Q])",
        "keyword",
      ],
      [
        "(?:I)?[XYZABCUVW](?:(?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+))|(?=\\s|$))",
        "axis",
      ],
      [
        "(?:FU|FZ|F)(?:(?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "feed",
      ],
      [
        "S(?:(?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "spindle",
      ],
      [
        "[+-]?(?:Q[LRS]?\\d+)",
        "variable",
      ],
      [
        "(?:I)?(?:CCA|DR2|LEN|P1X|P1Y|P1Z|P2X|P2Y|P2Z|P3X|P3Y|P3Z|REP|DL|DR|MB|NX|NY|NZ|PA|PR|TX|TY|TZ|VC|R)(?:(?:[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "number",
      ],
      [
        "[+-]?(?:\\d+[.,]?\\d*|[.,]\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,()!\\[\\]]",
        "operator",
      ],
      [
        "[A-Za-z][A-Za-z0-9+\\-.:\\\\/_]*",
        "",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > okuma-osp: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^\\$[^%]*%",
        "programMarker",
      ],
      [
        "^\\s*%.*$",
        "programMarker",
      ],
      [
        "\\([^)]*\\)",
        "comment",
      ],
      [
        "\\([^)]*$",
        "comment",
      ],
      [
        "^\\s*[/]",
        "skip",
      ],
      [
        "^(\\s*)(N\\s*\\d+)(\\s*)([/])",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^(\\s*)((?!(?:NOEX|NOT|NE)(?=\\s|$))N[A-Za-z][A-Za-z0-9]{0,3}(?=\\s|$))(\\s*)([/])",
        [
          "",
          "section",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*O(?<name>[A-Z][A-Z0-9]{0,15}|\\d{1,16})\\s*$",
        "programMarker",
      ],
      [
        "((?:CALL|MODIN))(\\s+)(O(?:[A-Z][A-Z0-9]{0,15}|\\d{1,16})(?![A-Z0-9]))(?![0-9A-Za-z_])",
        [
          "keyword",
          "",
          "programMarker",
        ],
      ],
      [
        "(?:PSELECT|MODOUT|CLEAR|MODIN|WRITE|CALL|DRAW|GOTO|NOEX|READ|AND|END|EOR|GET|NOT|PUT|RTS|EQ|GE|GT|IF|LE|LT|NE|OR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "(?!(?:NOEX|NOT|NE)(?=\\s|$))N[A-Za-z][A-Za-z0-9]{0,3}(?=\\s|$)",
        "section",
      ],
      [
        "(?:V[A-Z][A-Z0-9]{3}|VTL[A-Z])",
        "variable",
      ],
      [
        "(?:V\\d+)",
        "variable",
      ],
      [
        "[A-Za-z]{2,8}(?=\\s*\\[)",
        "keyword",
      ],
      [
        "(?:[ADFIKLRSTUWXZ][AB]|BC|BR|QA|CL|C[PQR]|S[XYZ]|T[LDS])(?=\\s*=(?!=))",
        "keyword",
      ],
      [
        "T(?=\\s*=(?!=))",
        "tool",
      ],
      [
        "[XZCY](?=\\s*=(?!=))",
        "axis",
      ],
      [
        "[IK](?=\\s*=(?!=))",
        "arcCenter",
      ],
      [
        "F(?=\\s*=(?!=))",
        "feed",
      ],
      [
        "S(?=\\s*=(?!=))",
        "spindle",
      ],
      [
        "G\\s*\\d{1,3}(?![\\d.])",
        "gcode",
      ],
      [
        "M\\s*\\d{1,4}(?![\\d.])",
        "mcode",
      ],
      [
        "T\\s*(?:\\d{6}|\\d{4})(?!\\d)",
        "tool",
      ],
      [
        "T\\s*\\d+",
        "",
      ],
      [
        "[XZCY]\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "axis",
      ],
      [
        "[IK]\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "arcCenter",
      ],
      [
        "F\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "feed",
      ],
      [
        "S\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "spindle",
      ],
      [
        "(?:DA|SA|SB|A|B|D|E|H|J|L|O|P|Q|R|U|W)\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[A-Za-z]{2}[A-Za-z0-9]{0,2}(?![0-9A-Za-z])",
        "variable",
      ],
      [
        "(?:[A-Z]{2}[A-Z0-9]*)",
        "",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,!\\[\\]]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > sinumerik: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "declare": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        ",",
        {
          "switchTo": "declareName",
          "token": "operator",
        },
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        {
          "switchTo": "declareName",
          "token": "keyword",
        },
      ],
      [
        "[(\\[]",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      {
        "include": "root",
      },
    ],
    "declareName": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        "\\s+",
        "",
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        "keyword",
      ],
      [
        "\\[",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      [
        "[A-Za-z_][A-Za-z0-9_]*",
        {
          "switchTo": "declare",
          "token": "variable",
        },
      ],
      [
        "(?=\\S)",
        {
          "switchTo": "declare",
          "token": "@rematch",
        },
      ],
    ],
    "declareNest": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        "[(\\[]",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      [
        "[)\\]]",
        {
          "next": "@pop",
          "token": "operator",
        },
      ],
      {
        "include": "root",
      },
    ],
    "root": [
      [
        "^;?%(?:_N_)?\\w+_(?:MPF|SPF)",
        "programMarker",
      ],
      [
        ""[^"]*"",
        "string",
      ],
      [
        ""[^"]*$",
        "string",
      ],
      [
        ";.*$",
        "comment",
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*(?!\\s))((?:N\\s*\\d+|:\\s*\\d+)?)(\\s*(?!\\s))((?:(?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))?)(\\s*(?!\\s))((?:DEF)(?![A-Za-z0-9_]))",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "blockNumber",
          "",
          "section",
          "",
          {
            "next": "declare",
            "token": "keyword",
          },
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)(N\\d+)([ \\t]+)((?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))",
        [
          "",
          "skip",
          "",
          "blockNumber",
          "",
          "section",
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)((?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))",
        [
          "",
          "skip",
          "",
          "section",
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)(:\\s*\\d+)",
        [
          "",
          "skip",
          "",
          "blockNumber",
        ],
      ],
      [
        "^(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*[/][0-9]?",
        "skip",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "(GOTO|GOTOF|GOTOB|GOTOC)(\\s+)(?!(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DEF|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_]))(?!N\\d+(?![A-Za-z0-9_]))(?!(?:R\\d+)(?![A-Za-z0-9_]))([A-Za-z_][A-Za-z0-9_]*)(?![A-Za-z0-9_])(?!\\s*[(=\\[])",
        [
          "keyword",
          "",
          "section",
        ],
      ],
      [
        "(?:\\$[A-Z_][A-Z0-9_]*)",
        "variable",
      ],
      [
        "(?:R\\d+)(?![\\w\\.])",
        "variable",
      ],
      [
        "R\\s*(?=\\[)",
        "variable",
      ],
      [
        "G\\s*\\d{1,3}(?![\\d\\.])",
        "gcode",
      ],
      [
        "M\\s*\\d+(?![\\d\\.])",
        "mcode",
      ],
      [
        "L\\s*\\d+(?![\\d\\.])",
        "keyword",
      ],
      [
        "T(?=\\s*=(?!=))",
        "tool",
      ],
      [
        "[XZCY](?=\\s*=(?!=))",
        "axis",
      ],
      [
        "[IJK](?=\\s*=(?!=))",
        "arcCenter",
      ],
      [
        "F(?=\\s*=(?!=))",
        "feed",
      ],
      [
        "S(?=\\s*=(?!=))",
        "spindle",
      ],
      [
        "(?:LIMS|AR|CR|SF|D|P)(?=\\s*=(?!=))",
        "number",
      ],
      [
        "[A-Za-z_][A-Za-z0-9_]{0,63}\\[[^\\]]{1,63}\\](?=\\s*=(?!=))",
        "keyword",
      ],
      [
        "(?=[A-Za-z_][A-Za-z0-9_]{0,63}\\s*=(?!=))(?:[A-Z_][A-Z0-9_]*(?=\\s*=(?!=)))",
        "keyword",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "tool",
      ],
      [
        "[XZCY](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "axis",
      ],
      [
        "[IJK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "spindle",
      ],
      [
        "(?:LIMS|AR|CR|SF|D|P)(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "number",
      ],
      [
        "(?:[A-Za-z_]\\w*(?=\\()|(?:[A-Z_]{2}[A-Z0-9_]*)(?![A-Za-z0-9_])(?=\\s+\\())",
        "keyword",
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DEF|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        "keyword",
      ],
      [
        "[A-Za-z_]\\w*",
        "",
      ],
      [
        "'[HB][0-9A-F \\t]*'",
        "number",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?",
        "number",
      ],
      [
        "(?:==|<>|<=|>=|<<)",
        "operator",
      ],
      [
        "[=+\\-*/\\^%:<>|&,()!\\[\\]]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > sinumerik-mill: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "declare": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        ",",
        {
          "switchTo": "declareName",
          "token": "operator",
        },
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        {
          "switchTo": "declareName",
          "token": "keyword",
        },
      ],
      [
        "[(\\[]",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      {
        "include": "root",
      },
    ],
    "declareName": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        "\\s+",
        "",
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        "keyword",
      ],
      [
        "\\[",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      [
        "[A-Za-z_][A-Za-z0-9_]*",
        {
          "switchTo": "declare",
          "token": "variable",
        },
      ],
      [
        "(?=\\S)",
        {
          "switchTo": "declare",
          "token": "@rematch",
        },
      ],
    ],
    "declareNest": [
      [
        "^",
        {
          "next": "@popall",
          "token": "@rematch",
        },
      ],
      [
        "[(\\[]",
        {
          "next": "declareNest",
          "token": "operator",
        },
      ],
      [
        "[)\\]]",
        {
          "next": "@pop",
          "token": "operator",
        },
      ],
      {
        "include": "root",
      },
    ],
    "root": [
      [
        "^;?%(?:_N_)?\\w+_(?:MPF|SPF)",
        "programMarker",
      ],
      [
        ""[^"]*"",
        "string",
      ],
      [
        ""[^"]*$",
        "string",
      ],
      [
        ";.*$",
        "comment",
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*(?!\\s))((?:N\\s*\\d+|:\\s*\\d+)?)(\\s*(?!\\s))((?:(?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))?)(\\s*(?!\\s))((?:DEF)(?![A-Za-z0-9_]))",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "blockNumber",
          "",
          "section",
          "",
          {
            "next": "declare",
            "token": "keyword",
          },
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)(N\\d+)([ \\t]+)((?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))",
        [
          "",
          "skip",
          "",
          "blockNumber",
          "",
          "section",
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)((?!(?:GOTO|GOTOF|GOTOB|GOTOC):)[A-Za-z_]\\w*:(?!=))",
        [
          "",
          "skip",
          "",
          "section",
        ],
      ],
      [
        "^(\\s*(?!\\s))((?:[/][0-9]?)?)(\\s*)(:\\s*\\d+)",
        [
          "",
          "skip",
          "",
          "blockNumber",
        ],
      ],
      [
        "^(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^(\\s*)([/][0-9]?)(\\s*)([/][0-9]?)",
        [
          "",
          "skip",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*[/][0-9]?",
        "skip",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "(GOTO|GOTOF|GOTOB|GOTOC)(\\s+)(?!(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DEF|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_]))(?!N\\d+(?![A-Za-z0-9_]))(?!(?:R\\d+)(?![A-Za-z0-9_]))([A-Za-z_][A-Za-z0-9_]*)(?![A-Za-z0-9_])(?!\\s*[(=\\[])",
        [
          "keyword",
          "",
          "section",
        ],
      ],
      [
        "(?:\\$[A-Z_][A-Z0-9_]*)",
        "variable",
      ],
      [
        "(?:R\\d+)(?![\\w\\.])",
        "variable",
      ],
      [
        "R\\s*(?=\\[)",
        "variable",
      ],
      [
        "G\\s*\\d{1,3}(?![\\d\\.])",
        "gcode",
      ],
      [
        "M\\s*\\d+(?![\\d\\.])",
        "mcode",
      ],
      [
        "L\\s*\\d+(?![\\d\\.])",
        "keyword",
      ],
      [
        "T(?=\\s*=(?!=))",
        "tool",
      ],
      [
        "[XYZABC](?=\\s*=(?!=))",
        "axis",
      ],
      [
        "[IJK](?=\\s*=(?!=))",
        "arcCenter",
      ],
      [
        "F(?=\\s*=(?!=))",
        "feed",
      ],
      [
        "S(?=\\s*=(?!=))",
        "spindle",
      ],
      [
        "(?:LIMS|AR|CR|SF|D|P)(?=\\s*=(?!=))",
        "number",
      ],
      [
        "[A-Za-z_][A-Za-z0-9_]{0,63}\\[[^\\]]{1,63}\\](?=\\s*=(?!=))",
        "keyword",
      ],
      [
        "(?=[A-Za-z_][A-Za-z0-9_]{0,63}\\s*=(?!=))(?:[A-Z_][A-Z0-9_]*(?=\\s*=(?!=)))",
        "keyword",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "tool",
      ],
      [
        "[XYZABC](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "axis",
      ],
      [
        "[IJK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "spindle",
      ],
      [
        "(?:LIMS|AR|CR|SF|D|P)(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?)",
        "number",
      ],
      [
        "(?:[A-Za-z_]\\w*(?=\\()|(?:[A-Z_]{2}[A-Z0-9_]*)(?![A-Za-z0-9_])(?=\\s+\\())",
        "keyword",
      ],
      [
        "(?:COMPCURV|ENDWHILE|TRANSMIT|AMIRROR|COMPCAD|DEFAULT|DISPLOF|DISPLON|ENDLOOP|EXTCALL|ORIAXES|ORIVECT|REPEATB|TRAFOOF|ASCALE|ATRANS|COMPOF|COMPON|CUT3DC|DIAM90|DIAMOF|DIAMON|ENDFOR|EXTERN|MIRROR|ORIMKS|ORIWKS|REPEAT|STOPRE|STRING|TRAANG|TRACYL|TRAORI|BLOCK|BRISK|B_AND|B_NOT|B_XOR|CFTCP|CUT2D|ENDIF|FFWOF|FFWON|FRAME|GOTOB|GOTOC|GOTOF|KONTC|KONTT|MCALL|PCALL|SBLOF|SBLON|SCALE|TRANS|UNTIL|WHILE|AROT|AXIS|BOOL|B_OR|CALL|CASE|CFIN|CHAR|ELSE|GOTO|KONT|LOOP|NORM|PROC|REAL|SOFT|SUPA|ACN|ACP|AND|CFC|CIP|DEF|DIV|FOR|INT|MOD|NOT|RET|ROT|RPL|XOR|AC|CT|DC|IC|IF|OF|OR|TO)(?![A-Za-z0-9_])",
        "keyword",
      ],
      [
        "[A-Za-z_]\\w*",
        "",
      ],
      [
        "'[HB][0-9A-F \\t]*'",
        "number",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)(?:EX[+-]?\\d+)?",
        "number",
      ],
      [
        "(?:==|<>|<=|>=|<<)",
        "operator",
      ],
      [
        "[=+\\-*/\\^%:<>|&,()!\\[\\]]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;
